--- a/app/src/main/res/layout/dpad_arrows.xml
+++ b/app/src/main/res/layout/dpad_arrows.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="HardcodedText,ContentDescription"
     android:layout_width="200dp"
-    android:layout_height="200dp">
+    android:layout_height="200dp"
+    android:theme="@style/Theme.Material3.Dark">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -60,17 +61,27 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
+        <com.google.android.material.button.MaterialButton
+            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
             android:id="@+id/closeButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:theme="@style/Theme.MaterialComponents.DayNight"
-            android:src="@android:drawable/ic_delete"
+            android:theme="@style/Theme.Material3.Light"
+            app:icon="@android:drawable/ic_delete"
             app:backgroundTint="#FF0000"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:fabSize="mini" />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/Widget.Material3.Button.IconButton.Outlined"
+            android:id="@+id/resizeHandle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            app:icon="@drawable/resize_handle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
