--- a/app/src/main/res/layout/resizable.xml
+++ b/app/src/main/res/layout/resizable.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<xtr.keymapper.floatingkeys.MovableFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="320dp"
     android:layout_height="240dp"
@@ -31,4 +31,4 @@
             android:layout_gravity="center"
             android:src="@drawable/crosshair" />
 
-</FrameLayout>
+</xtr.keymapper.floatingkeys.MovableFrameLayout>
