--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -38,7 +38,8 @@
         android:layout_marginHorizontal="40dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/barrier2"
-        app:layout_constraintTop_toBottomOf="@id/profilesView" />
+        app:layout_constraintTop_toBottomOf="@id/profilesView"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
