--- a/app/src/main/res/layout/fragment_profiles_view.xml
+++ b/app/src/main/res/layout/fragment_profiles_view.xml
@@ -1,57 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout2"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:layout_height="240dp"
     android:translationZ="1dp"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:animateLayoutChanges="true"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/header"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/current_profile"
-            android:visibility="visible" />
-
-        <TextView
-            android:id="@+id/current_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:visibility="visible" />
-    </LinearLayout>
+    app:layout_constraintTop_toTopOf="parent">
 
     <LinearLayout
         android:id="@+id/profiles_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:animateLayoutChanges="true"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/profiles"
             android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:visibility="visible"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            android:scrollIndicators="bottom"
+            app:fastScrollEnabled="false"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/profile_row_item" />
 
-           <ImageButton
+        <ImageButton
             android:id="@+id/profiles_button"
             android:layout_width="20dp"
             android:layout_height="160dp"
-            android:layout_gravity="center"
+            android:layout_gravity="top"
             android:background="#00FFFFFF"
             android:foreground="@drawable/ic_profiles_2"
             android:foregroundTint="@color/white"
@@ -63,10 +43,10 @@
         android:id="@+id/add_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
         android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="@id/profiles_view"
+        app:layout_constraintEnd_toEndOf="parent"
         app:shapeAppearance="@style/Widget.Material3.Button.IconButton.Outlined"
         app:srcCompat="@drawable/ic_plus_white_24dp" />
 
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
