Show App selection dialog on create profile

--- a/app/src/main/res/layout/fragment_profiles_apps.xml
+++ b/app/src/main/res/layout/fragment_profiles_apps.xml
@@ -21,7 +21,7 @@
             android:id="@+id/header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/current_profile"
+            android:text="@string/package_name"
             android:visibility="visible" />
 
         <TextView
