--- a/app/src/main/res/layout/activity_main_controls.xml
+++ b/app/src/main/res/layout/activity_main_controls.xml
@@ -2,13 +2,56 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="20dp"
-    android:theme="@style/Theme.XtMapper.cmdview"
+    android:theme="@style/Theme.Material3.Dark"
     app:layout_constraintBottom_toBottomOf="parent"
     android:gravity="bottom"
     tools:background="@color/black"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <LinearLayout
+        android:id="@+id/L1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="4dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/L2">
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/Widget.Material3.Button.ElevatedButton"
+            android:id="@+id/start_editor"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginVertical="4dp"
+            android:drawablePadding="110dp"
+            android:text="@string/edit_keymap"
+            app:icon="@drawable/ic_create_white_36dp"
+            app:iconSize="24dp" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/Widget.Material3.Button.ElevatedButton"
+            android:id="@+id/start_in_terminal"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginVertical="4dp"
+            android:text="@string/activation"
+            app:icon="@drawable/ic_terminal"
+            app:iconSize="30dp" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/Widget.Material3.Button.ElevatedButton"
+            android:id="@+id/start_server"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginVertical="4dp"
+            android:text="@string/auto_activate"
+            app:icon="@drawable/ic_start_button"
+            app:iconSize="36dp" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/L2"
@@ -21,6 +64,7 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <com.google.android.material.button.MaterialButton
+            style="@style/Widget.Material3.Button.ElevatedButton"
             android:id="@+id/config_button"
             android:layout_width="match_parent"
             android:layout_height="80dp"
@@ -30,15 +74,17 @@
             app:iconSize="26dp" />
 
         <com.google.android.material.button.MaterialButton
+            style="@style/Widget.Material3.Button.ElevatedButton"
             android:id="@+id/start_pointer"
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:layout_marginVertical="4dp"
-            android:text="@string/start_touch_pointer"
+            android:text="@string/start"
             app:icon="@drawable/ic_pointer_arrow"
-            app:iconSize="24dp" />
+            app:iconSize="24dp"/>
 
         <com.google.android.material.button.MaterialButton
+            style="@style/Widget.Material3.Button.ElevatedButton"
             android:id="@+id/about_button"
             android:layout_width="match_parent"
             android:layout_height="80dp"
@@ -48,45 +94,5 @@
             app:iconSize="30dp" />
     </LinearLayout>
 
-
-    <LinearLayout
-        android:id="@+id/L1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="4dp"
-        android:orientation="vertical"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/L2"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/start_editor"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_marginVertical="4dp"
-            android:text="@string/edit_keymap"
-            app:icon="@drawable/ic_create_white_36dp"
-            app:iconSize="24dp"
-            android:drawablePadding="110dp"/>
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/start_in_terminal"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_marginVertical="4dp"
-            android:text="@string/start_server_manual"
-            app:icon="@drawable/ic_terminal"
-            app:iconSize="30dp" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/start_server"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_marginVertical="4dp"
-            android:text="@string/start_server"
-            app:icon="@drawable/ic_start_button"
-            app:iconSize="30dp" />
-
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
