--- a/app/src/main/res/layout/keymap_editor.xml
+++ b/app/src/main/res/layout/keymap_editor.xml
@@ -1,83 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.nambimobile.widgets.efab.ExpandableFabLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@+id/coordinatorLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/MainView"
-    app:layout_constraintBottom_toBottomOf="parent"
+    android:theme="@style/Theme.XtMapper.EditorUI"
     android:layout_width="match_parent"
-    android:layout_gravity="center"
-    android:layout_height="match_parent"
-    android:theme="@style/Theme.MaterialComponents"
-    tools:context=".EditorUI">
+    android:layout_height="match_parent">
 
-    <com.nambimobile.widgets.efab.Overlay
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:overlay_color="#000000"
-        app:overlay_alpha="0.50"
-        app:overlay_openingAnimationDurationMs="1000"/>
-
-    <com.nambimobile.widgets.efab.ExpandableFab
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+    <com.leinardi.android.speeddial.SpeedDialView
+        android:id="@+id/speedDial"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        app:efab_size="custom"
-        app:fabCustomSize="80dp"
-        app:maxImageSize="36dp"
-        app:efab_color="#9C27B0"
-        app:efab_icon="@drawable/ic_create_white_36dp"
-        app:efab_iconAnimationRotationDeg="-225"
-        app:efab_firstFabOptionMarginPx="60"
-        app:efab_successiveFabOptionMarginPx="60"
-        app:efab_fabOptionSize="custom"/>
+        android:layout_margin="2dp"
+        app:sdExpansionMode="top"
+        app:sdMainFabAnimationRotateAngle="135"
+        app:sdMainFabClosedSrc="@drawable/ic_create_white_36dp"
+        app:sdMainFabClosedBackgroundColor="#9C27B0" />
 
-    <com.nambimobile.widgets.efab.FabOption
-        android:id="@+id/add_button"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        app:fabCustomSize="50dp"
-        app:fab_icon="@drawable/newkey"
-        app:label_text="Add key" />
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-    <com.nambimobile.widgets.efab.FabOption
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        app:fabCustomSize="80dp"
-        app:maxImageSize="50dp"
-        android:id="@+id/d_pad"
-        app:fab_icon="@drawable/dpad"
-        app:label_text="D-Pad" />
 
-    <com.nambimobile.widgets.efab.FabOption
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        app:fabCustomSize="60dp"
-        app:maxImageSize="40dp"
-        app:fab_icon="@drawable/crosshair"
-        android:backgroundTint="@color/black"
-        android:id="@+id/cross_hair"
-        app:label_text="CrossHair" />
 
-    <com.nambimobile.widgets.efab.FabOption
-        android:id="@+id/mouse_left"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        app:fabCustomSize="60dp"
-        app:maxImageSize="36dp"
-        app:fab_icon="@drawable/ic_baseline_mouse_36"
-        android:backgroundTint="@color/black"
-        app:label_text="Left click"/>
-
-    <com.nambimobile.widgets.efab.FabOption
-        android:id="@+id/save_button"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        app:fabCustomSize="50dp"
-        app:maxImageSize="36dp"
-        app:fab_icon="@drawable/ic_baseline_done_36"
-        app:label_text="Save" />
-
-</com.nambimobile.widgets.efab.ExpandableFabLayout>
