--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,7 +5,6 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
     tools:context=".activity.MainActivity"
     tools:ignore="ContentDescription,SpUsage">
 
@@ -21,13 +20,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout="@layout/fragment_profiles_view" />
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
+        style="@style/Widget.Material3.CardView.Elevated"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:translationZ="-1dp"
         android:translationX="20dp"
         app:cardElevation="0dp"
-        app:cardBackgroundColor="@color/dark_grey"
         app:cardCornerRadius="60dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -38,7 +37,7 @@
             android:layout_margin="10dp"
             android:layout_height="match_parent"
             android:layout_width="match_parent"/>
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 
     <include layout="@layout/activity_main_controls"
         android:layout_width="350dp"
