--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -5,7 +5,6 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
     tools:context=".activity.MainActivity"
     tools:ignore="ContentDescription,SpUsage">
 
@@ -41,12 +40,12 @@
         app:layout_constraintTop_toBottomOf="@id/profilesView"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
+        style="@style/Widget.Material3.CardView.Elevated"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginVertical="20dp"
         android:layout_marginRight="40dp"
-        app:cardBackgroundColor="@color/dark_grey"
         app:cardCornerRadius="50dp"
         app:layout_constraintLeft_toRightOf="@id/barrier2"
         app:layout_constraintRight_toRightOf="parent"
@@ -57,6 +56,6 @@
         <include
             android:id="@+id/cmdview"
             layout="@layout/activity_main_cmdview" />
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
