--- a/app/src/main/res/layout/activity_main_controls.xml
+++ b/app/src/main/res/layout/activity_main_controls.xml
@@ -2,13 +2,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="20dp"
-    android:theme="@style/Theme.Material3.Dark"
     app:layout_constraintBottom_toBottomOf="parent"
     android:gravity="bottom"
-    tools:background="@color/black"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:id="@+id/L1"
@@ -93,6 +90,5 @@
             app:icon="@drawable/ic_baseline_help_outline_24"
             app:iconSize="30dp" />
     </LinearLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
