--- a/app/src/main/res/layout/fragment_settings_dialog.xml
+++ b/app/src/main/res/layout/fragment_settings_dialog.xml
@@ -65,6 +65,21 @@
             app:trackHeight="10dp"
             tools:value="1.0" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/swipe_delay_ms" />
+
+        <com.google.android.material.slider.Slider
+            android:id="@+id/slider_swipe_delay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:stepSize="100"
+            android:valueFrom="0"
+            android:valueTo="1000"
+            app:trackHeight="10dp"
+            tools:value="1.0" />
+
     </LinearLayout>
 
     <LinearLayout
