Allow more precise adjustment of swipe delay and radius values

--- a/app/src/main/res/layout/fragment_settings_dialog.xml
+++ b/app/src/main/res/layout/fragment_settings_dialog.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -29,8 +28,7 @@
             app:haloColor="@color/purple_700"
             app:thumbColor="@color/purple_500"
             app:trackColorActive="@color/teal_200"
-            app:trackHeight="10dp"
-            tools:value="2" />
+            app:trackHeight="10dp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,8 +45,7 @@
             app:haloColor="@color/purple_700"
             app:thumbColor="@color/purple_500"
             app:trackColorActive="@color/teal_200"
-            app:trackHeight="10dp"
-            tools:value="2" />
+            app:trackHeight="10dp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -59,26 +56,23 @@
             android:id="@+id/slider_dpad"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:stepSize="0.1"
             android:valueFrom="0.5"
             android:valueTo="2.0"
-            app:trackHeight="10dp"
-            tools:value="1.0" />
+            app:trackHeight="10dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/swipe_delay_text"
             android:text="@string/swipe_delay_ms" />
 
         <com.google.android.material.slider.Slider
             android:id="@+id/slider_swipe_delay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:stepSize="100"
             android:valueFrom="0"
-            android:valueTo="1000"
-            app:trackHeight="10dp"
-            tools:value="1.0" />
+            android:valueTo="500"
+            app:trackHeight="10dp" />
 
     </LinearLayout>
 
