feat: add enable/disable switch to profiles view

--- a/app/src/main/res/layout/profile_row_item.xml
+++ b/app/src/main/res/layout/profile_row_item.xml
@@ -2,6 +2,7 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical">
@@ -26,15 +27,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/mouse_aim_activated"
-        app:layout_constraintStart_toEndOf="@id/app_icon_button"
-        app:layout_constraintEnd_toStartOf="@id/delete_button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/edit_button"
@@ -55,5 +48,15 @@
         app:layout_constraintEnd_toStartOf="@id/edit_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.materialswitch.MaterialSwitch
+        android:id="@+id/switch1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/package_name"
+        app:layout_constraintStart_toEndOf="@id/app_icon_button"
+        app:layout_constraintEnd_toStartOf="@id/delete_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
