--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,5 +2,16 @@
     <!-- Base application theme. -->
     <style name="Theme.XtMapper" parent="Theme.Material3.DynamicColors.DayNight"> </style>
 
-    <style name="Theme.XtMapper.EditorUI" parent="Theme.MaterialComponents"> </style>
+    <style name="Theme.XtMapper.EditorUI" parent="Theme.MaterialComponents">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowActionBar">true</item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowActionModeOverlay">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:immersive">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
 </resources>
