--- a/app/src/main/res/layout/fragment_settings_dialog.xml
+++ b/app/src/main/res/layout/fragment_settings_dialog.xml
@@ -312,6 +312,13 @@
 
             </com.google.android.material.button.MaterialButtonToggleGroup>
         </LinearLayout>
+
+        <com.google.android.material.materialswitch.MaterialSwitch
+            android:id="@+id/auto_profile_switch"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:checked="true"
+            android:text="@string/disable_auto_profile" />
     </LinearLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
