--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -13,6 +13,6 @@
     <item
         android:id="@+id/misc"
         android:enabled="true"
-        android:icon="@drawable/ic_baseline_mouse_36"
-        android:title="@string/gestures" />
+        android:icon="@drawable/ic_baseline_settings_24"
+        android:title="@string/config" />
 </menu>
