refactor: remove unused resources

--- a/app/src/main/res/layout/activity_main_controls.xml
+++ b/app/src/main/res/layout/activity_main_controls.xml
@@ -1,5 +1,4 @@
-<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constrained"
-    android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="20dp"
     app:layout_constraintBottom_toBottomOf="parent"
