feat: Add support for Shizuku as activation method

--- a/app/src/main/res/layout/fragment_settings_dialog.xml
+++ b/app/src/main/res/layout/fragment_settings_dialog.xml
@@ -347,6 +347,13 @@
 
         </LinearLayout>
 
+        <com.google.android.material.materialswitch.MaterialSwitch
+            android:id="@+id/use_shizuku"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:checked="false"
+            android:text="@string/use_shizuku" />
+
     </LinearLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
